--- a/cwProject/cwApp/templates/cwApp/confirmation.html
+++ b/cwProject/cwApp/templates/cwApp/confirmation.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>CONFIRM</title>
-</head>
-<body>
+{% extends 'cwApp/index.html' %}
+
+{% block content %}
 <h2>Thank you for you time! You will hear back
     from the city as soon as possible.</h2>
-</body>
-</html>
+{% endblock %}
+
