--- a/cwProject/cwApp/templates/cwApp/application.html
+++ b/cwProject/cwApp/templates/cwApp/application.html
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>APPLY</title>
-</head>
-<body>
+{% extends 'cwApp/index.html' %}
+
+{% block content %}
 <form method="POST">
     {% csrf_token %}
     {{ form.as_p }}
     <button>Submit</button>
 </form>
-</body>
-</html>
+{% endblock %}
